# rbpf_riscv

./: Cargo.toml  README.md  new_output_asm.txt  output_asm.txt  program.elf  program_exec.elf
benches/: jit_compile.rs  vm_execution.rs
src/: ebpf.rs  elf.rs  error.rs  jit.rs  lib.rs  main.rs  memory_region.rs  program.rs  riscv.rs  static_analysis.rs  test_utils.rs  testjit.rs  verifier.rs  vm.rs
src/elf_parser/: consts.rs  mod.rs
tests/: execution.rs  exercise_instructions.rs
