[package]
name = "riscv-main"
version = "0.1.0"
edition = "2021"

include = [
    "src/**",
    "examples/**",
    "tests/**",
    "benches/**",
    "Cargo.toml",
]

[dependencies]
arbitrary = { version = "1.0", optional = true, features = ["derive"] }
byteorder = "1.2"
combine = "3.8.1"
gdbstub = { version = "0.6.2", optional = true }
goblin = "0.5.1"
hash32 = "0.2.0"
log = "0.4.2"
rand = { version = "0.8.5", features = ["small_rng"]}
rustc-demangle = "0.1"
scroll = "0.11"
thiserror = "1.0.26"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "errhandlingapi"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["jit"]
jit = ["libc", "winapi"]
fuzzer-not-safe-for-production = ["arbitrary"]
debugger = ["gdbstub"]

[dev-dependencies]
elf = "0.0.10"
json = "0.12"
test_utils = { path = "test_utils/" }

